--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,36 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Express.js backend for deployment",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
+    "vercel-build": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "express",
+    "backend",
+    "vercel"
+  ],
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.1.0",
-    "mongoose": "^6.10.0",
-    "nodemon": "^2.0.20"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.0.0",
+    "vercel": "^31.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
